--- a/src/app/components/hard-skills/hard-skills.component.html
+++ b/src/app/components/hard-skills/hard-skills.component.html
@@ -13,7 +13,7 @@
 					<input [(ngModel)]="miPortfolio.id" #identificador style="display: none;"><br>
 
 					<i class="display-3 col-sm-12  d-flex align-content-center justify-content-center"
-						[class]="miPortfolio.icono" [style]="miPortfolio.color"></i>
+						[class]="miPortfolio.icono" [style.color]="miPortfolio.color"></i>
 					<circle-progress class="d-flex align-content-center justify-content-center"
 						[percent]="miPortfolio.circulo" [unitsColor]="'#ffffff'" [responsive]="false" [radius]="70"
 						[unitsFontSize]="'50'" [showSubtitle]="false" [titleFontSize]="'50'" [titleColor]="'#ffffff'"
